local/logs/project.log
2022-09-18T05:36:05.020Z - normal: Load ~/.CocosCreator/settings.json
2022-09-18T05:36:05.059Z - normal: Initializing Asset Database
2022-09-18T05:36:05.060Z - normal: checking language setting...
2022-09-18T05:36:05.060Z - normal: Language: en
2022-09-18T05:36:05.491Z - success: preview server running at http://localhost:7456
2022-09-18T05:36:05.504Z - success: protocol editor-framework registered
2022-09-18T05:36:05.504Z - success: protocol app registered
2022-09-18T05:36:05.504Z - success: protocol theme registered
2022-09-18T05:36:05.504Z - success: protocol packages registered
2022-09-18T05:36:05.505Z - success: protocol uuid registerred
2022-09-18T05:36:05.505Z - success: protocol db registerred
2022-09-18T05:36:05.505Z - success: protocol thumbnail registerred
2022-09-18T05:36:05.505Z - success: protocol unpack registerred
2022-09-18T05:36:05.505Z - success: protocol disable-commonjs registerred
2022-09-18T05:36:06.989Z - normal: connected!
2022-09-18T05:36:06.991Z - normal: Check project /Users/fe-anhtu-fresher/Desktop/game-app
2022-09-18T05:36:06.992Z - normal: Initializing project /Users/fe-anhtu-fresher/Desktop/game-app
2022-09-18T05:36:07.244Z - normal: Initializing Cocos2d
2022-09-18T05:36:07.662Z - normal: Initializing engine extends
2022-09-18T05:36:07.703Z - success: alipay-adapter loaded
2022-09-18T05:36:07.721Z - success: asset-db-debugger loaded
2022-09-18T05:36:07.726Z - success: baidu-adapter loaded
2022-09-18T05:36:07.730Z - success: color-picker loaded
2022-09-18T05:36:07.823Z - success: fb-audience-network loaded
2022-09-18T05:36:07.864Z - success: fb-live-stream loaded
2022-09-18T05:36:07.866Z - success: google-play-instant loaded
2022-09-18T05:36:07.869Z - success: huawei-runtime loaded
2022-09-18T05:36:08.014Z - success: cpk-publish loaded
2022-09-18T05:36:08.014Z - success: jsb-adapter loaded
2022-09-18T05:36:08.021Z - success: oppo-runtime loaded
2022-09-18T05:36:08.033Z - success: package-manager loaded
2022-09-18T05:36:08.101Z - success: qqplay-adapter loaded
2022-09-18T05:36:08.102Z - success: runtime-dev-tools loaded
2022-09-18T05:36:08.134Z - success: sdkbox loaded
2022-09-18T05:36:08.149Z - success: tester loaded
2022-09-18T05:36:08.159Z - success: ui-kit-preview-extra loaded
2022-09-18T05:36:08.170Z - success: ui-kit-preview loaded
2022-09-18T05:36:08.182Z - success: ui-kit loaded
2022-09-18T05:36:08.185Z - success: vivo-runtime loaded
2022-09-18T05:36:08.186Z - success: weapp-adapter loaded
2022-09-18T05:36:08.186Z - success: xiaomi-adapter loaded
2022-09-18T05:36:08.188Z - success: alipay-minigame loaded
2022-09-18T05:36:08.228Z - success: assets loaded
2022-09-18T05:36:08.238Z - success: builder loaded
2022-09-18T05:36:08.405Z - success: cocos-services loaded
2022-09-18T05:36:08.422Z - success: console loaded
2022-09-18T05:36:08.444Z - success: fb-instant-games loaded
2022-09-18T05:36:08.456Z - success: game-window loaded
2022-09-18T05:36:08.456Z - success: google-instant-games loaded
2022-09-18T05:36:08.470Z - success: hierarchy loaded
2022-09-18T05:36:08.480Z - success: inspector loaded
2022-09-18T05:36:08.481Z - success: keystore loaded
2022-09-18T05:36:08.492Z - success: node-library loaded
2022-09-18T05:36:08.493Z - success: package-asset loaded
2022-09-18T05:36:08.493Z - success: preferences loaded
2022-09-18T05:36:08.505Z - success: project-exporter loaded
2022-09-18T05:36:08.517Z - success: project-importer loaded
2022-09-18T05:36:08.527Z - success: project-settings loaded
2022-09-18T05:36:08.540Z - success: scene loaded
2022-09-18T05:36:08.541Z - success: simulator-debugger loaded
2022-09-18T05:36:08.542Z - success: sprite-editor loaded
2022-09-18T05:36:08.555Z - success: store loaded
2022-09-18T05:36:08.569Z - success: timeline loaded
2022-09-18T05:36:08.571Z - success: xiaomi-runtime loaded
2022-09-18T05:36:12.404Z - normal: Loading packages
2022-09-18T05:36:12.408Z - normal: Watching packages
2022-09-18T05:36:12.480Z - normal: Run Application
2022-09-18T05:36:17.447Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:36:22.205Z - info: Cocos Services load base data!
2022-09-18T05:45:36.782Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:45:49.625Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:49:30.044Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:50:17.538Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:51:15.938Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:51:48.284Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:52:20.587Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:54:33.859Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:54:51.811Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T05:59:59.123Z - failed: [db-task][sync-changes] Failed to import asset /Users/fe-anhtu-fresher/Desktop/game-app/assets/scripts/core/ShipControl.js, message: Compile error: SyntaxError: /Users/fe-anhtu-fresher/Desktop/game-app/assets/scripts/core/ShipControl.js: Unexpected token (17:8)
  15 |             const bullet = cc.instantiate(this.bulletPrefab);
  16 |             bullet.parent = this.
> 17 |         }
     |         ^
  18 |     },
  19 | });
  20 | 
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp$3.parseIdentifier (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4332:10)
    at Parser.pp$3.parseSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3517:30)
    at Parser.pp$3.parseExprSubscripts (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3504:15)
    at Parser.pp$3.parseMaybeUnary (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3474:19)
    at Parser.pp$3.parseExprOps (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3404:19)
    at Parser.pp$3.parseMaybeConditional (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3381:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3344:19)
    at Parser.pp$3.parseMaybeAssign (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:3367:23)
2022-09-18T06:00:19.972Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:01:18.201Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:01:35.594Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:03:58.875Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:04:08.531Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:04:39.276Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:05:51.214Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:07:30.961Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:09:47.238Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:11:56.848Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:13:44.276Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:16:36.974Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:16:51.640Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:19:50.053Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:20:25.009Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:21:30.482Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:22:14.878Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:24:10.878Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:24:19.759Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:24:35.175Z - warn: Can not instantiate CCClass 'undefined' with arguments.
2022-09-18T06:25:27.135Z - warn: Can not instantiate CCClass 'undefined' with arguments.
